--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,20 +8,20 @@ crawler:
   use_proxy: false # 是否启用代理，false 时为关闭
   default_proxy: "http://127.0.0.1:10086"
 
-# 🔸 daily（当日汇总模式）
-#   • 推送时机：按时推送(默认每小时推送一次)
-#   • 显示内容：当日所有匹配新闻 + 新增新闻区域
-#   • 适用场景：日报总结、全面了解当日热点趋势
+🔸 daily（当日汇总模式）
+  • 推送时机：按时推送(默认每小时推送一次)
+  • 显示内容：当日所有匹配新闻 + 新增新闻区域
+  • 适用场景：日报总结、全面了解当日热点趋势
 #
-# 🔸 current（当前榜单模式）
-#   • 推送时机：按时推送(默认每小时推送一次)
-#   • 显示内容：当前榜单匹配新闻 + 新增新闻区域
-#   • 适用场景：实时热点追踪、了解当前最火的内容
+🔸 current（当前榜单模式）
+  • 推送时机：按时推送(默认每小时推送一次)
+  • 显示内容：当前榜单匹配新闻 + 新增新闻区域
+  • 适用场景：实时热点追踪、了解当前最火的内容
 #
-# 🔸 incremental（增量监控模式）
-#   • 推送时机：有新增才推送
-#   • 显示内容：新出现的匹配频率词新闻
-#   • 适用场景：避免重复信息干扰
+🔸 incremental（增量监控模式）
+  • 推送时机：有新增才推送
+  • 显示内容：新出现的匹配频率词新闻
+  • 适用场景：避免重复信息干扰
 
 # 推送模式选择
 report:
@@ -46,9 +46,9 @@ notification:
     # 注意：GitHub Actions 执行时间不稳定，时间范围建议至少留足 2 小时
     # 如果想要精准的定时推送，建议使用 Docker 部署在个人服务器上
     time_range:
-      start: "20:00"  # 推送时间窗口开始（北京时间）
-      end: "22:00"    # 推送时间窗口结束（北京时间）
-    once_per_day: true  # 每天在时间窗口内只推送一次，如果 false，则窗口内每次执行都推送
+      start: "08:00"  # 推送时间窗口开始（北京时间）
+      end: "02:00"    # 推送时间窗口结束（北京时间）
+    once_per_day: false  # 每天在时间窗口内只推送一次，如果 false，则窗口内每次执行都推送
     push_record_retention_days: 7  # 推送记录保留天数
 
   # 请务必妥善保管好 webhooks，不要公开
